--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html>
     <head>
         <meta http-equiv="content-type" content="text/html; charset=utf-8">
-        <title>shellholic home page</title>
+        <title>shellholic's home page</title>
     </head>
     <body>
-        <h1 id="top">shellholic</h1>
+        <h1 id="top">shellholic's home page</h1>
         <p>Welcome!</p>
     </body>
 </html>
